[project]
name = "bron-neo4j"
version = "0.1.0"
description = "Load the BRON (Linked Threat Data) dataset into Neo4j"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["bron", "neo4j", "cybersecurity", "threat-intelligence", "cve", "cwe", "capec", "mitre-attack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "neo4j>=5.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
